# aptos-from-one-account-to-many

./: Cargo.toml  addresses.txt
src/: main.rs
