[package]
name = "from-one-to-many"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
anyhow = "1.0.66"
once_cell = "1.15.0"
tokio = "1.21.2"
url = "2.3.1"
reqwest = "0.11.12"
serde = { version = "1", features = ["derive"] }
